platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_89.platter
  
table of Student = [
  piece of Name;
    chars of Age;
];

start() {
  Student of Student1 = [
      Name = 1;
        Age = "Hello";
    ];
    
    Student of Student2 = [
      Name = 2;
        Age = "World";
    ];
    
  Student[] of Class = [
    
    ];
    
    chars[] of Class1 = [Student1:Name, Student1:Age];
    
  serve 0;
}